--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "marked-mangle": "^1.1.7",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
