--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ng-icons/core": "^31.2.0",
+    "@ng-icons/lucide": "^31.2.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
@@ -37,6 +39,7 @@
     "rxjs": "~7.8.0",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
+    "zod": "^3.24.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
