--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "marked-mangle": "^1.1.7",
+    "mongodb": "^6.15.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tailwindcss-animate": "^1.0.7",
