Project moved from local setup to github

--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,12 @@
             "configFile": "vite.config.ts",
             "main": "src/main.ts",
             "outputPath": "dist/client",
-            "tsConfig": "tsconfig.app.json"
+            "tsConfig": "tsconfig.app.json",
+            "styles": [
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.css",
+              "src/styles.css"
+            ]
           },
           "defaultConfiguration": "production",
           "configurations": {
