--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# environmental variables
+.env
+
+# local environment examples
+.env.local
+.env.*.local
+
 # Compiled output
 /dist
 /tmp
