--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "private": true,
   "dependencies": {
-    "@analogjs/content": "^1.14.1",
-    "@analogjs/router": "^1.14.1",
+    "@analogjs/content": "^1.15.0",
+    "@analogjs/router": "^1.15.0",
     "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.2.8",
+    "@angular/cdk": "^19.2.10",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -31,30 +31,37 @@
     "@ng-icons/core": "^31.2.0",
     "@ng-icons/lucide": "^31.2.0",
     "front-matter": "^4.0.2",
-    "marked": "^5.0.2",
-    "marked-gfm-heading-id": "^3.1.0",
-    "marked-highlight": "^2.0.1",
-    "marked-mangle": "^1.1.7",
+    "marked": "^15.0.7",
+    "marked-gfm-heading-id": "^4.1.1",
+    "marked-highlight": "^2.2.1",
+    "marked-mangle": "^1.1.10",
     "mongodb": "^6.15.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zod": "^3.24.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^1.14.1",
-    "@analogjs/vite-plugin-angular": "^1.14.1",
-    "@analogjs/vitest-angular": "^1.14.1",
+    "@analogjs/platform": "^1.15.0",
+    "@analogjs/vite-plugin-angular": "^1.15.0",
+    "@analogjs/vitest-angular": "^1.15.0",
     "@angular-devkit/build-angular": "^19.0.0",
     "@angular/build": "^19.0.0",
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
+    "@nx/angular": "^19.1.0",
+    "@nx/vite": "^19.1.0",
     "autoprefixer": "^10.4.14",
     "jsdom": "^22.0.0",
+    "nx": "^19.1.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.0",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.2.0",
