REMOVED SITE_URL env var
Inserted
https://asteroid-analog.vercel.app/

instead of localhost:5173

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:5173/"
+      "url": "https://asteroid-analog.vercel.app/"
     },
     {
       "name": "ng test",
