--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "https://asteroid-analog.vercel.app/"
+      "url": "http://localhost:5173/" // http://localhost:5173/
     },
     {
       "name": "ng test",
