--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ng-icons/core": "^31.3.0",
+    "@ng-icons/feather-icons": "^31.3.0",
     "front-matter": "^4.0.2",
     "marked": "^15.0.7",
     "marked-gfm-heading-id": "^4.1.1",
